基本上全部完成 不要按到我沒做的東西就好 明天試試看能不能整套移到張哲浩電腦上跑

--- a/final/src/main/resources/templates/account.html
+++ b/final/src/main/resources/templates/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Blog</title>
+<title>AGUARE</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="The River template project">
@@ -31,7 +31,7 @@
 			<div
 				class="header_content d-flex flex-row align-items-center justify-content-start">
 				<div class="logo">
-					<a href="#">hehehe</a>
+					<a href="#">AGUARE</a>
 				</div>
 				<div
 					class="ml-auto d-flex flex-row align-items-center justify-content-start">
@@ -108,7 +108,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content text-center">
-								<div class="home_title">Blog</div>
+								<div class="home_title">My Account</div>
 								<div class="booking_form_container">
 									<form action="test2" th:object="${test2}" class="booking_form"
 										id="booking_form" method="post">
@@ -164,8 +164,8 @@
 							<div class="footer_logo_container text-center">
 								<div class="footer_logo">
 									<a href="#"></a>
-									<div>The River</div>
-									<div>since 1945</div>
+									<div>AGUARE</div>
+									<div>since 1999</div>
 								</div>
 							</div>
 						</div>
