--- a/final/src/main/resources/templates/blog.html
+++ b/final/src/main/resources/templates/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Blog</title>
+<title>AGUARE</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="The River template project">
@@ -23,7 +23,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo"><a href="#">The River</a></div>
+			<div class="logo"><a href="#">AGUARE</a></div>
 			<div class="ml-auto d-flex flex-row align-items-center justify-content-start">
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
@@ -37,7 +37,7 @@
 				<div class="book_button"><a href="booking.html">Book Online</a></div>
 				<div class="header_phone d-flex flex-row align-items-center justify-content-center">
 					<img src="images/phone.png" alt="">
-					<span th:text="${checkVacncyObject.night}"></span>
+					<span>33663730</span>
 				</div>
 
 				<!-- Hamburger Menu -->
