--- a/final/src/main/resources/templates/contact.html
+++ b/final/src/main/resources/templates/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact</title>
+<title>AGUARE</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="The River template project">
@@ -23,7 +23,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo"><a href="#">The River</a></div>
+			<div class="logo"><a href="#">AGUARE</a></div>
 			<div class="ml-auto d-flex flex-row align-items-center justify-content-start">
 				<nav class="main_nav">
 					<ul class="d-flex flex-row align-items-start justify-content-start">
@@ -166,8 +166,8 @@
 						<div class="footer_logo_container text-center">
 							<div class="footer_logo">
 								<a href="#"></a>
-								<div>The River</div>
-								<div>since 1945</div>
+								<div>AGUARE</div>
+								<div>since 1999</div>
 							</div>
 						</div>
 					</div>
