--- a/final/src/main/resources/templates/index.html
+++ b/final/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>The River</title>
+<title>AGUARE</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="The River template project">
@@ -34,7 +34,7 @@
 			<div
 				class="header_content d-flex flex-row align-items-center justify-content-start">
 				<div class="logo">
-					<a href="#">The River</a>
+					<a href="#">AGUARE</a>
 				</div>
 				<div
 					class="ml-auto d-flex flex-row align-items-center justify-content-start">
@@ -111,7 +111,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content text-center">
-								<div class="home_title">校年早餐店</div>
+								<div class="home_title">AGUARE</div>
 								<div class="booking_form_container">
 									<form action="#" th:action="@{/index}" th:object="${index}"
 										class="booking_form" id="booking_form" method="post">
@@ -568,8 +568,8 @@
 						<div class="footer_logo_container text-center">
 							<div class="footer_logo">
 								<a href="#"></a>
-								<div>The River</div>
-								<div>since 1945</div>
+								<div>AGUARE</div>
+								<div>since 1999</div>
 							</div>
 						</div>
 					</div>
